--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,460 +1,1 @@
-<!-- review section ends -->
-
-<!-- boton que desliza para arriba -->
-<span class="arriba bx bxs-up-arrow"></span>
-<!-- Fin del boton que desliza para arriba -->
-
-<!-- boton del wassap -->
-<a
-  style="top: 13em; right: 0.2em"
-  href="https://api.whatsapp.com/send/?phone=593984772266&text=Hola%2C+%C2%BFc%C3%B3mo+podemos+ayudarte%3F+Env%C3%ADanos+un+mensaje+&type=phone_number&app_absent=0"
-  class="btn-wsp"
-  target="_blank"
->
-  <i class="fa fa-whatsapp icono"></i>
-</a>
-<!-- Fin del boton del wassap -->
-
-<div class="case-studies-section wf-section">
-  <div class="wrapper project-slider">
-    <div
-      data-delay="4000"
-      data-animation="slide"
-      class="project-slider w-slider"
-      data-autoplay="false"
-      data-easing="ease"
-      data-hide-arrows="false"
-      data-disable-swipe="false"
-      data-autoplay-limit="0"
-      data-nav-spacing="3"
-      data-duration="500"
-      data-infinite="true"
-    >
-      <div class="project-slider-mask w-slider-mask">
-        <div class="project-slide w-slide">
-          <div class="w-dyn-list">
-            <div role="list" class="w-dyn-items">
-              <div role="listitem" class="w-dyn-item">
-                <a class="project-slide-link-block w-inline-block">
-                  <div class="project-slider-image-wrapper">
-                    <img
-                      src="https://vcm.emol.com/wp-content/uploads/2019/01/tomar-agua-wordpress-768x457.jpg"
-                      loading="lazy"
-                      alt=""
-                      sizes="(max-width: 479px) 90vw, (max-width: 767px) 363.578125px, (max-width: 991px) 366.4375px, (max-width: 1279px) 37vw, (max-width: 1439px) 34vw, 486px"
-                      class="image"
-                    />
-                  </div>
-                  <div class="project-slider-content">
-                    <div class="project-slider-tags-wrapper">
-                      <div class="project-slider-tag-text-wrapper">
-                        <h6 class="project-slider-tag-text">
-                          Hábitos de una vida saludable
-                        </h6>
-                      </div>
-                      <div class="project-slider-tag-text-wrapper">
-                        <h6
-                          class="project-slider-tag-text w-dyn-bind-empty"
-                        ></h6>
-                      </div>
-                    </div>
-                    <div class="project-slider-heading-wrapper">
-                      <h5 class="project-slider-heading">
-                        El rol del agua para gestionar el estrés
-                      </h5>
-                    </div>
-                    <div class="view-project-div">
-                      <div class="text-block _18px">
-                        beber agua es una herramienta muy eficiente para calmar
-                        ese estado de intranquilidad.
-                      </div>
-                    </div>
-                  </div>
-                </a>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="project-slide w-slide">
-          <div class="w-dyn-list">
-            <div role="list" class="w-dyn-items">
-              <div role="listitem" class="w-dyn-item">
-                <a class="project-slide-link-block w-inline-block">
-                  <div class="project-slider-image-wrapper">
-                    <img
-                      src="https://www.tusaladeespera.es/wp-content/uploads/2019/06/dieta-equilibrada_56_1-1024x683.jpg"
-                      loading="lazy"
-                      alt=""
-                      sizes="(max-width: 479px) 90vw, (max-width: 767px) 363.578125px, (max-width: 991px) 366.4375px, (max-width: 1279px) 37vw, (max-width: 1439px) 34vw, 486px"
-                      class="image"
-                    />
-                  </div>
-                  <div class="project-slider-content">
-                    <div class="project-slider-tags-wrapper">
-                      <div class="project-slider-tag-text-wrapper">
-                        <h6 class="project-slider-tag-text">
-                          Hábitos de una vida saludable
-                        </h6>
-                      </div>
-                    </div>
-                    <div class="project-slider-heading-wrapper">
-                      <h5 class="project-slider-heading">
-                        Crear un plan de alimentación saludable
-                      </h5>
-                    </div>
-                    <div class="view-project-div">
-                      <div class="text-block _18px">
-                        Proporcionar a tu cuerpo macronutrientes (proteínas,
-                        grasas saludables, carbohidratos) le permitirá funcionar
-                        correctamente, lo que resultará en un mejor estado de
-                        ánimo y rendimiento en el trabajo y en la vida
-                        cotidiana.
-                      </div>
-                    </div>
-                  </div>
-                </a>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="project-slide w-slide">
-          <div class="w-dyn-list">
-            <div role="list" class="w-dyn-items">
-              <div role="listitem" class="w-dyn-item">
-                <a class="project-slide-link-block w-inline-block">
-                  <div class="project-slider-image-wrapper">
-                    <img
-                      src="http://2.bp.blogspot.com/-AQcqt9Chuyc/Tm-qS54nLfI/AAAAAAAAADk/mTno4pEniWc/s1600/relacion.jpg"
-                      loading="lazy"
-                      alt=""
-                      sizes="(max-width: 479px) 90vw, (max-width: 767px) 363.578125px, (max-width: 991px) 366.4375px, (max-width: 1279px) 37vw, (max-width: 1439px) 34vw, 486px"
-                      class="image"
-                    />
-                  </div>
-                  <div class="project-slider-content">
-                    <div class="project-slider-tags-wrapper">
-                      <div class="project-slider-tag-text-wrapper">
-                        <h6 class="project-slider-tag-text">
-                          Hábitos de una vida saludable
-                        </h6>
-                      </div>
-                      <div class="project-slider-tag-text-wrapper">
-                        <h6
-                          class="project-slider-tag-text w-dyn-bind-empty"
-                        ></h6>
-                      </div>
-                    </div>
-                    <div class="project-slider-heading-wrapper">
-                      <h5 class="project-slider-heading">
-                        Rodéate de gente positiva y optimista
-                      </h5>
-                    </div>
-                    <div class="view-project-div">
-                      <div class="text-block _18px">
-                        Mantener relaciones sanas estimula nuestro estado
-                        emocional y potencia nuestro sentido de pertenencia; nos
-                        permite intercambiar ideas y expandir nuestra mente a
-                        través de las relaciones con los demás.
-                      </div>
-                    </div>
-                  </div>
-                </a>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="project-slide w-slide">
-          <div class="w-dyn-list">
-            <div role="list" class="w-dyn-items">
-              <div role="listitem" class="w-dyn-item">
-                <a>
-                  <div class="project-slider-image-wrapper">
-                    <img
-                      src="https://idemsport.com/wp-content/uploads/2020/08/01.jpg"
-                      loading="lazy"
-                      alt=""
-                      sizes="(max-width: 479px) 90vw, (max-width: 767px) 363.578125px, (max-width: 991px) 366.4375px, (max-width: 1279px) 37vw, (max-width: 1439px) 34vw, 486px"
-                      class="image"
-                    />
-                  </div>
-                  <div class="project-slider-content">
-                    <div class="project-slider-tags-wrapper">
-                      <div class="project-slider-tag-text-wrapper">
-                        <h6 class="project-slider-tag-text">
-                          Hábitos de una vida saludable
-                        </h6>
-                      </div>
-                    </div>
-                    <div class="project-slider-heading-wrapper">
-                      <h5 class="project-slider-heading">Realizar Deporte</h5>
-                    </div>
-                    <div class="view-project-div">
-                      <div class="text-block _18px">
-                        Hacer ejercicio puede mejorar la salud mental ayudando
-                        al cerebro a sobrellevar mejor el estrés.
-                      </div>
-                      <div class="view-project-arrow-wrapper">
-                        <img
-                          src="https://assets.website-files.com/5fef5619b640934b33c2385e/5ff019fc559a4200eda62273_Vector.svg"
-                          loading="lazy"
-                          alt=""
-                          class="view-project-arrow"
-                        />
-                      </div>
-                    </div>
-                  </div>
-                </a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="project-slider-left-arrow w-slider-arrow-left">
-        <div class="project-slider-arrow-icon-wrapper">
-          <img
-            src="https://assets.website-files.com/5fef5619b640934b33c2385e/5fef584b6f3b7d0fb04e725e_Vector-4.svg"
-            loading="lazy"
-            alt=""
-            class="image contain"
-          />
-        </div>
-      </div>
-      <div class="project-slider-right-arrow w-slider-arrow-right">
-        <div class="project-slider-arrow-icon-wrapper">
-          <img
-            src="https://assets.website-files.com/5fef5619b640934b33c2385e/5fef584a07453d08e05572b5_Vector-3.svg"
-            loading="lazy"
-            alt=""
-            class="image contain"
-          />
-        </div>
-      </div>
-      <div class="project-slider-nav w-slider-nav w-round"></div>
-    </div>
-  </div>
-</div>
-<!-- ========== Inicio del bloG========== -->
-
-<section class="blog" id="blogs"></section>
-<div class="blog-section wf-section" style="background: #f0e68c">
-  <div class="wrapper blog-homepage">
-    <div class="blog-heading-and-subtext-wrapper">
-      <div class="blog-subtext-wrapper">
-        <h6>Blogs</h6>
-      </div>
-      <div class="blog-heading-wrapper">
-        <h2>Ultimos Blogs</h2>
-      </div>
-      <br />
-      <div class="loadindroedor">
-        <!-- ========== Roedor ========== -->
-
-        <div
-          aria-label="Orange and tan hamster running in a metal wheel"
-          role="img"
-          class="wheel-and-hamster"
-          style="width: 25em; height: 25em"
-        >
-          <div class="wheel"></div>
-          <div class="hamster" style="top: 19em">
-            <div class="hamster__body">
-              <div class="hamster__head">
-                <div class="hamster__ear"></div>
-                <div class="hamster__eye"></div>
-                <div class="hamster__nose"></div>
-              </div>
-              <div class="hamster__limb hamster__limb--fr"></div>
-              <div class="hamster__limb hamster__limb--fl"></div>
-              <div class="hamster__limb hamster__limb--br"></div>
-              <div class="hamster__limb hamster__limb--bl"></div>
-              <div class="hamster__tail"></div>
-            </div>
-          </div>
-          <div class="spoke"></div>
-        </div>
-
-        <!-- ========== Fin del roedor========== -->
-      </div>
-    </div>
-    <div class="blog-content-wrapper">
-      <div class="w-dyn-list">
-        <div role="list" class="w-dyn-items">
-          <div role="listitem" class="w-dyn-item">
-            <a
-              data-w-id="746c52b2-eb33-9827-9714-953f54c5c0c6"
-              href="https://www.anahana.com/es/mental-health/stress-management-for-teens#:~:text=Por%20lo%20tanto%2C%20las%20mejores%20herramientas%20que%20un,comenzar.%20%C2%BFQu%C3%A9%20causa%20la%20ansiedad%20en%20los%20adolescentes%3F"
-              class="blog-section-blog-item-wrapper w-inline-block"
-              target="_blank"
-            >
-              <!-- ========== _blank abre otras pestañas ========== -->
-              <div class="blog-item-date-and-time-wrapper">
-                <div>
-                  <div class="text-block">Agosto 23, 2021</div>
-                </div>
-              </div>
-              <div class="blog-item-heading-wrapper">
-                <h4>MANEJO DEL ESTRÉS PARA ADOLESCENTES</h4>
-              </div>
-              <div class="blog-item-read-the-article-wrapper">
-                <div class="blog-item-read-the-article-text-wrapper">
-                  <div class="text-block">Leer el articulo</div>
-                </div>
-                <div class="blog-item-arrow-wrapper">
-                  <i class="fa-solid fa-arrow-right arrowrigtht"></i>
-                </div>
-              </div>
-            </a>
-          </div>
-          <div role="listitem" class="w-dyn-item">
-            <a
-              data-w-id="746c52b2-eb33-9827-9714-953f54c5c0c6"
-              href="https://www.biobiochile.cl/noticias/blogs/blog-ubo/2020/12/23/efecto-de-pandemia-de-covid-19-trastorno-de-estres-postraumatico-en-el-cerebro-de-los-adolescentes.shtml"
-              class="blog-section-blog-item-wrapper w-inline-block"
-              target="_blank"
-            >
-              <div class="blog-item-date-and-time-wrapper">
-                <div class="blog-item-date-wrapper">
-                  <div class="text-block">Diciembre 23, 2020</div>
-                </div>
-                <div class="blog-item-dot"></div>
-                <div class="blog-item-time-wrapper">
-                  <div class="text-block">12:28</div>
-                </div>
-              </div>
-              <div class="blog-item-heading-wrapper">
-                <h4>
-                  Efecto de pandemia de covid-19: trastorno de estrés
-                  postraumático en el cerebro de los adolescentes
-                </h4>
-              </div>
-              <div class="blog-item-read-the-article-wrapper">
-                <div class="blog-item-read-the-article-text-wrapper">
-                  <div class="text-block">Leer el articulo</div>
-                </div>
-                <div class="blog-item-arrow-wrapper">
-                  <i class="fa-solid fa-arrow-right arrowrigtht"></i>
-                </div>
-              </div>
-            </a>
-          </div>
-          <div role="listitem" class="w-dyn-item">
-            <a
-              data-w-id="746c52b2-eb33-9827-9714-953f54c5c0c6"
-              href="https://blog.up.edu.mx/prepaup/femenil/tecnicas-para-combatir-el-estres-en-la-adolescencia"
-              class="blog-section-blog-item-wrapper w-inline-block"
-              target="_blank"
-            >
-              <div class="blog-item-date-and-time-wrapper">
-                <div class="blog-item-date-wrapper">
-                  <div class="text-block">Mayo 26, 2021</div>
-                </div>
-                <div class="blog-item-dot"></div>
-                <div class="blog-item-time-wrapper">
-                  <div class="text-block">15:00</div>
-                </div>
-              </div>
-              <div class="blog-item-heading-wrapper">
-                <h4>Técnicas para combatir el estrés en la adolescencia</h4>
-              </div>
-              <div class="blog-item-read-the-article-wrapper">
-                <div class="blog-item-read-the-article-text-wrapper">
-                  <div class="text-block">Leer el articulo</div>
-                </div>
-                <div class="blog-item-arrow-wrapper">
-                  <i class="fa-solid fa-arrow-right arrowrigtht"></i>
-                </div>
-              </div>
-            </a>
-          </div>
-          <div role="listitem" class="w-dyn-item">
-            <a
-              data-w-id="746c52b2-eb33-9827-9714-953f54c5c0c6"
-              href="https://kidshealth.org/SeattleCH/es/parents/stress.html"
-              class="blog-section-blog-item-wrapper w-inline-block"
-              target="_blank"
-            >
-              <div class="blog-item-date-and-time-wrapper">
-                <div class="blog-item-date-wrapper">
-                  <div class="text-block">Abril, 2022</div>
-                </div>
-              </div>
-              <div class="blog-item-heading-wrapper">
-                <h4>Estrés infantil: Cómo pueden ayudar los padres</h4>
-              </div>
-              <div class="blog-item-read-the-article-wrapper">
-                <div class="blog-item-read-the-article-text-wrapper">
-                  <div class="text-block">Leer el articulo</div>
-                </div>
-                <div class="blog-item-arrow-wrapper">
-                  <i class="fa-solid fa-arrow-right arrowrigtht"></i>
-                </div>
-              </div>
-            </a>
-          </div>
-          <div role="listitem" class="w-dyn-item">
-            <a
-              data-w-id="746c52b2-eb33-9827-9714-953f54c5c0c6"
-              href="https://www.elesquiu.com/curiosidades/2022/12/31/estres-actividades-que-ayudan-superarlo-460982.html"
-              class="blog-section-blog-item-wrapper w-inline-block"
-              target="_blank"
-            >
-              <div class="blog-item-date-and-time-wrapper">
-                <div class="blog-item-date-wrapper">
-                  <div class="text-block">Diciembre 31, 2022</div>
-                </div>
-              </div>
-              <div class="blog-item-heading-wrapper">
-                <h4>Estrés: 6 actividades que ayudan a superarlo</h4>
-              </div>
-              <div class="blog-item-read-the-article-wrapper">
-                <div class="blog-item-read-the-article-text-wrapper">
-                  <div class="text-block">Leer el articulo</div>
-                </div>
-                <div class="blog-item-arrow-wrapper">
-                  <i class="fa-solid fa-arrow-right arrowrigtht"></i>
-                </div>
-              </div>
-            </a>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-
-<!-- FIN DEL BLOG  -->
-
-<!-- doctors section starts  -->
-
-<section class="doctors" id="doctors">
-  <h1 class="heading"><span>Creadores</span></h1>
-  <h3 class="heading">¡Hola Nos Presentamos!</h3>
-
-  <div class="box-container">
-    <div class="box">
-      <img src="../assets/img/FotoPerfilDonald.png" alt="" />
-      <h3>Donald David Silva Sánchez</h3>
-      <span>expert doctor</span>
-      <div class="share">
-        <a href="#" class="fab fa-facebook-f"></a>
-        <a href="#" class="fab fa-twitter"></a>
-        <a href="#" class="fab fa-instagram"></a>
-        <a href="#" class="fab fa-linkedin"></a>
-      </div>
-    </div>
-
-    <div class="box">
-      <img src="../assets/img/Perfilelvis.png" alt="" />
-      <h3>Elvis Luis Gonzales Acosta</h3>
-      <span>expert doctor</span>
-      <div class="share">
-        <a href="#" class="fab fa-facebook-f"></a>
-        <a href="#" class="fab fa-twitter"></a>
-        <a href="#" class="fab fa-instagram"></a>
-        <a href="#" class="fab fa-linkedin"></a>
-      </div>
-    </div>
-  </div>
-</section>
-
-<!-- doctors section ends -->
+<router-outlet></router-outlet>
