--- a/src/app/componentes/menu/menu.component.html
+++ b/src/app/componentes/menu/menu.component.html
@@ -10,7 +10,9 @@
           <a href="#">Test</a>
           <ul>
             <li><a routerLink="/testestresinfo">Test de Estres</a></li>
-            <li><a routerLink="/testansiedadinfo">Test de Ansiedad</a></li>
+            <li>
+              <a href="/testansiedadinfo">Test de Ansiedad</a>
+            </li>
             <li><a routerLink="/testdepresioninfo">Test de Depresión</a></li>
           </ul>
         </li>
