--- a/src/app/componentes/paginaprincipal/paginaprincipal.component.html
+++ b/src/app/componentes/paginaprincipal/paginaprincipal.component.html
@@ -566,7 +566,7 @@
                     <a class="project-slide-link-block w-inline-block">
                       <div class="project-slider-image-wrapper">
                         <img
-                          src="https://www.tusaladeespera.es/wp-content/uploads/2019/06/dieta-equilibrada_56_1-1024x683.jpg"
+                          src="https://img.freepik.com/free-photo/meal-planning-food-arrangement_23-2149099838.jpg?w=740&t=st=1675718634~exp=1675719234~hmac=dd32bdfb2c27a31d8fa7c4daaf9fe7b47e71a1ab5ce6603e4e6e8bc99f3cb65b"
                           loading="lazy"
                           alt=""
                           sizes="(max-width: 479px) 90vw, (max-width: 767px) 363.578125px, (max-width: 991px) 366.4375px, (max-width: 1279px) 37vw, (max-width: 1439px) 34vw, 486px"
