--- a/src/app/componentes/menuestres/menuestres.component.html
+++ b/src/app/componentes/menuestres/menuestres.component.html
@@ -11,7 +11,7 @@
         <a href="#">Test</a>
         <ul>
           <li><a routerLink="/testestresinfo">Test de Estres</a></li>
-          <li><a routerLink="/testansiedadinfo">Test de Ansiedad</a></li>
+          <li><a href="/testansiedadinfo">Test de Ansiedad</a></li>
           <li><a routerLink="/testdepresioninfo">Test de Depresión</a></li>
         </ul>
       </li>
