--- a/src/app/componentes/testqueesestres/testqueesestres.component.html
+++ b/src/app/componentes/testqueesestres/testqueesestres.component.html
@@ -24,14 +24,27 @@
         eventos externos, como un trabajo exigente o problemas personales, o por
         pensamientos internos, como el miedo o la ansiedad.
       </p>
-      <div class="card-footer">
-        <a class="btn2">
-          <span class="btn-text-one">Ver Video</span>
-          <span class="btn-text-two">Aprendemos!</span>
-        </a>
+
+      <div class="box-container">
+        <div class="box">
+          <div class="card-footer">
+            <div class="video-container">
+              <a class="btn2">
+                <span class="btn-text-one">Ver Video</span>
+                <span class="btn-text-two">Aprendemos!</span>
+              </a>
+            </div>
+            <div class="popup-video">
+              <span class="close" style="right: -22em">&times;</span>
+              <video
+                src="../../../assets/video/saludestresVideo.mp4"
+                muted
+                controls
+              ></video>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </div>
 </section>
-
-<!-- about section ends -->
